--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/new.html.twig
@@ -29,8 +29,19 @@
                 <div class="widgetform">{{ form_widget(form.pasaporte) }}</div>
             </div>
             <div class="contenedorform">
-                <div class="labelform">Fecha de Ingreso:</div>
-                <div class="widgetform">{{ form_widget(form.fechaingreso) }}</div>
+                <div class="labelform">Fecha de Ingreso (día/mes/año):</div>
+                <div class="widgetform">
+                    {{ form_widget(form.fechaingreso, {'attr':{'class':'fecha'}})}}
+                    <script>
+                      $(function() {
+                        $( ".fecha" ).datepicker({
+                          changeMonth: true,
+                          changeYear: true,
+                          dateFormat: "dd-mm-yy",
+                        });
+                      });
+                    </script>
+                </div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Correo:</div>
