--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
@@ -28,7 +28,7 @@
         </div>
         <div class="contenedorform">
             <div class="labelform">Fecha de Ingreso:</div>
-            <div class="widgetform">{{ entity.fechaingreso|date('Y-m-d') }}</div>
+            <div class="widgetform">{{ entity.fechaingreso|date('d/m/Y') }}</div>
         </div>
         <div class="contenedorform">
             <div class="labelform">Correo:</div>
