--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/edit.html.twig
@@ -13,6 +13,20 @@
 {% block body -%}
     {{ parent() }}
 
+    {% if form_errors(edit_form.nombre) or form_errors(edit_form.sueldo) or form_errors(edit_form.pasaporte) or form_errors(edit_form.fechaingreso) or form_errors(edit_form.correo) or form_errors(edit_form.telefono) or form_errors(edit_form.corresponsaliaId) or form_errors(edit_form.cargoId)%}
+    <div class="alert alert-danger errores" style="width:70%;">
+        <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
+        <div>{{ form_errors(edit_form.nombre) }}</div>        
+        <div>{{ form_errors(edit_form.sueldo) }}</div>
+        <div>{{ form_errors(edit_form.pasaporte) }}</div>
+        <div>{{ form_errors(edit_form.fechaingreso) }}</div>
+        <div>{{ form_errors(edit_form.correo) }}</div>
+        <div>{{ form_errors(edit_form.telefono) }}</div>
+        <div>{{ form_errors(edit_form.corresponsaliaId) }}</div>
+        <div>{{ form_errors(edit_form.cargoId) }}</div>        
+    </div>
+    {% endif %}
+
     <form novalidate method="post" action="{{ path('personal_update',{'id':entity.id}) }}">
          <input type="hidden" name="_method" value="PUT"> {{ form_widget(edit_form._token) }}
         <div class="formShow" style="width:70%;">
