--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/edit.html.twig
@@ -51,7 +51,7 @@
                         $( ".fecha" ).datepicker({
                           changeMonth: true,
                           changeYear: true,
-                          dateFormat: "dd/mm/yy",
+                          dateFormat: "dd-mm-yy",
                         });
                       });
                     </script>
