Manejo de errores, registro de bitacora

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/edit.html.twig
@@ -113,7 +113,7 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Responsable:</div>
-                <div class="widgetform">{{ form_widget(form.responsable) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.responsable) }}</div>
             </div>
             {% if entity.fechaEstimadaRetorno|length > 0 %}
                 <div id="fechaEstimadaRetorno" class="contenedorform">
