cambio index de Personal

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/index.html.twig
@@ -20,16 +20,18 @@
                 <th>Sueldo</th>
                 <th>Pasaporte</th>
                 <th>Fecha de Ingreso</th>
+                <th>Corresponsal&iacute;a</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
-            <tr>
+            <tr align = 'center'>
                 <td><a href="{{ path('personal_show', { 'id': entity.id }) }}" data-toggle="tooltip" data-placement="top" title="Detalle de Personal">{{ entity.nombre }}</a></td>
                 <td>{{ entity.sueldo }}</td>
                 <td>{{ entity.pasaporte }}</td>
                 <td>{% if entity.fechaingreso %}{{ entity.fechaingreso|date('d/m/Y') }}{% endif %}</td>
+                <td> {{ entity.corresponsaliaId }}</td>
                 <td>
                     <a href="{{ path('personal_show', { 'id': entity.id }) }}" data-toggle="tooltip" data-placement="top" title="Detalle de Personal"><b class="glyphicon glyphicon-eye-open"></b></a>
                     <a href="{{ path('personal_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="top" title="Editar Personal"></b></a>
